@@ -33,6 +33,7 @@ Changelog
  * Fix: Form submissions pagination no longer looses date filter when changing page (Bertrand Bordage)
  * Fix: PostgreSQL search backend now removes duplicate page instances from the database (Bertrand Bordage)
  * Fix: `FormSubmissionsPanel` now recognises custom form submission classes (LB (Ben Johnston))
+ * Fix: Prevent the footer and revisions link from unnecessarily collapsing on mobile (Jack Paine)
 
 
 1.13.1 (17.11.2017)
